Prototyping work - Initial parsing strawman in place

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -28,6 +28,29 @@ OPT_CMAKE_CACHEVAR Trilinos_ENABLE_KOKKOS : ON
 OPT_CMAKE_CACHEVAR Trilinos_ENABLE_TPETRA BOOL : ON
 
 
+[TEST_CONFIGURATION_D]
+# Generic template of an option
+#PARAM0 PARAM1 PARAM2 PARAM3   = VALUE
+# GENERIC
+-G                              = Ninja
+# GENERIC
+-D Trilinos_ENABLE_KOKKOS :BOOL = ON
+# GENERIC
+-D Trilinos_ENABLE_XPETRA :BOOL = ON
+# GENERIC
+-D Trilinos_ENABLE_MUELU        = ON
+-D Trilinos_ENABLE_TEUCHOS      = "value with spaces"
+-D Trilinos_ENABLE_TPETRA       = 'value with spaces'
+-D Trilinos_ENABLE_ROL          = 'value "with" spaces'
+-D Trilinos_ENABLE_PANZER       = '"single double quoted?"'
+# CMAKE-SPECIFIC
+opt-cmake-path-src              = /path/to/source
+# CMAKE SPECIFIC
+opt-cmake-path-build            = /path/to/build
+/path/to/random/place
+# Provide by GENERIC
+# - DELETE all occurrences of PARAM2 at position in PARAM1
+opt-remove Trilinos_ENABLE_KOKKOS
 
 [TEST_CONFIGURATION_A+]
 use TEST_CONFIGURATION_A
