Initial development checkpoint

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -29,27 +29,16 @@ OPT_CMAKE_CACHEVAR Trilinos_ENABLE_TPETRA BOOL : ON
 
 
 [TEST_CONFIGURATION_D]
-# Generic template of an option
-#PARAM0 PARAM1 PARAM2 PARAM3   = VALUE
-# GENERIC
--G                              = Ninja
-# GENERIC
--D Trilinos_ENABLE_KOKKOS :BOOL = ON
-# GENERIC
--D Trilinos_ENABLE_XPETRA :BOOL = ON
-# GENERIC
--D Trilinos_ENABLE_MUELU        = ON
--D Trilinos_ENABLE_TEUCHOS      = "value with spaces"
--D Trilinos_ENABLE_TPETRA       = 'value with spaces'
--D Trilinos_ENABLE_ROL          = 'value "with" spaces'
--D Trilinos_ENABLE_PANZER       = '"single double quoted?"'
-# CMAKE-SPECIFIC
-opt-cmake-path-src              = /path/to/source
-# CMAKE SPECIFIC
-opt-cmake-path-build            = /path/to/build
-/path/to/random/place
-# Provide by GENERIC
-# - DELETE all occurrences of PARAM2 at position in PARAM1
+opt-set cmake
+opt-set -G                              = Ninja
+opt-set -D Trilinos_ENABLE_KOKKOS :BOOL = ON
+opt-set -D Trilinos_ENABLE_XPETRA :BOOL = ON
+opt-set -D Trilinos_ENABLE_MUELU        = ON
+opt-set -D Trilinos_ENABLE_TEUCHOS      = "value with spaces"
+opt-set -D Trilinos_ENABLE_TPETRA       = 'value with spaces'
+opt-set -D Trilinos_ENABLE_ROL          = 'value "with" spaces'
+opt-set -D Trilinos_ENABLE_PANZER       = '"single double quoted?"'
+opt-set /path/to/random/place
 opt-remove Trilinos_ENABLE_KOKKOS
 
 [TEST_CONFIGURATION_A+]
@@ -62,4 +51,44 @@ use TEST_CONFIGURATION_B
 use TEST_CONFIGURATION_A
 
 
+
+#
+# Sample Configuration
+#
+[CMAKE_GENERATOR_NINJA]
+opt-set cmake
+opt-set -G : Ninja
+
+[TRILINOS_COMMON]
+opt-set-cmake-cache  Trilinos_ENABLE_COMPLEX       BOOL   : ON
+opt-set-cmake-cache  Trilinos_ENABLE_THREAD_SAFE   BOOL   : ON
+opt-set-cmake-cache  Trilinos_PARALLEL_COMPILE_JOBS_LIMIT : 20
+opt-set-cmake-cache  Trilinos_PARALLEL_LINK_JOBS_LIMIT    : 4
+
+[CMAKE_BUILD_DIR]
+opt-set /path/to/build/dir
+
+[CMAKE_KOKKOS_DEFAULT]
+opt-set-cmake-cache  Trilinos_ENABLE_Kokkos         BOOL : ON
+opt-set-cmake-cache  Trilinos_ENABLE_KokkosCore     BOOL : ON
+opt-set-cmake-cache  Trilinos_ENABLE_KokkosKernels  BOOL : ON
+opt-set-cmake-cache  KokkosKernels_ENABLE_EXAMPLES  BOOL : ON
+
+[CMAKE_MUELU_DEFAULT]
+opt-set-cmake-cache  Trilinos_ENABLE_MueLu  BOOL : ON
+opt-set-cmake-cache  MueLu_ENABLE_TESTS     BOOL : ON
+
+[CMAKE_TPETRA_DEFAULT]
+opt-set-cmake-cache  Trilinos_ENABLE_Tpetra BOOL : ON
+opt-set-cmake-cache  Tpetra_INST_DOUBLE     BOOL : ON
+
+
+[TRILINOS_CONFIGURATION_ALPHA]
+use CMAKE_GENERATOR_NINJA
+use TRILINOS_COMMON
+use CMAKE_KOKKOS_DEFAULT
+use CMAKE_TPETRA_DEFAULT
+use CMAKE_MUELU_DEFAULT
+use CMAKE_BUILD_DIR
+opt-remove MueLu SUBSTR
 
