Initial development checkpoint

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -5,50 +5,50 @@
 #==============================================================================
 
 
-[TEST_CONFIGURATION_A]
--G = Ninja
--DTrilinos_ENABLE_KOKKOS:BOOL = OFF
--DTrilinos_ENABLE_TPETRA:BOOL = OFF
+#[TEST_CONFIGURATION_A]
+#-G = Ninja
+#-DTrilinos_ENABLE_KOKKOS:BOOL = OFF
+#-DTrilinos_ENABLE_TPETRA:BOOL = OFF
 
 
-[TEST_CONFIGURATION_B]
-opt-cmake-generator : Ninja
-opt-cmake-cachevar Trilinos_ENABLE_KOKKOS BOOL : ON
-opt-cmake-cachevar Trilinos_ENABLE_MUELU : ON
-opt-cmake-remove-cachevar Trilinos_ENABLE_MUELU
+#[TEST_CONFIGURATION_B]
+#opt-cmake-generator : Ninja
+#opt-cmake-cachevar Trilinos_ENABLE_KOKKOS BOOL : ON
+#opt-cmake-cachevar Trilinos_ENABLE_MUELU : ON
+#opt-cmake-remove-cachevar Trilinos_ENABLE_MUELU
 
 
-[TEST_CONFIGURATION_C]
-create-xform OPT_CMAKE_GENERATOR 1 : -G=${VALUE}
-create-xform OPT_CMAKE_CACHEVAR  1 : -D${PARAM1}=${VALUE}
-create-xform OPT_CMAKE_CACHEVAR  2 : -D${PARAM1}:${PARAM2}=${VALUE}
+#[TEST_CONFIGURATION_C]
+#create-xform OPT_CMAKE_GENERATOR 1 : -G=${VALUE}
+#create-xform OPT_CMAKE_CACHEVAR  1 : -D${PARAM1}=${VALUE}
+#create-xform OPT_CMAKE_CACHEVAR  2 : -D${PARAM1}:${PARAM2}=${VALUE}
 
-OPT_CMAKE_GENERATOR: Ninja
-OPT_CMAKE_CACHEVAR Trilinos_ENABLE_KOKKOS : ON
-OPT_CMAKE_CACHEVAR Trilinos_ENABLE_TPETRA BOOL : ON
-
-
-[TEST_CONFIGURATION_D]
-opt-set cmake
-opt-set -G                              = Ninja
-opt-set -D Trilinos_ENABLE_KOKKOS :BOOL = ON
-opt-set -D Trilinos_ENABLE_XPETRA :BOOL = ON
-opt-set -D Trilinos_ENABLE_MUELU        = ON
-opt-set -D Trilinos_ENABLE_TEUCHOS      = "value with spaces"
-opt-set -D Trilinos_ENABLE_TPETRA       = 'value with spaces'
-opt-set -D Trilinos_ENABLE_ROL          = 'value "with" spaces'
-opt-set -D Trilinos_ENABLE_PANZER       = '"single double quoted?"'
-opt-set /path/to/random/place
-opt-remove Trilinos_ENABLE_KOKKOS
-
-[TEST_CONFIGURATION_A+]
-use TEST_CONFIGURATION_A
-use TEST_CONFIGURATION_B
+#OPT_CMAKE_GENERATOR: Ninja
+#OPT_CMAKE_CACHEVAR Trilinos_ENABLE_KOKKOS : ON
+#OPT_CMAKE_CACHEVAR Trilinos_ENABLE_TPETRA BOOL : ON
 
 
-[TEST_CONFIGURATION_B+]
-use TEST_CONFIGURATION_B
-use TEST_CONFIGURATION_A
+#[TEST_CONFIGURATION_D]
+#opt-set cmake
+#opt-set -G                              = Ninja
+#opt-set -D Trilinos_ENABLE_KOKKOS :BOOL = ON
+#opt-set -D Trilinos_ENABLE_XPETRA :BOOL = ON
+#opt-set -D Trilinos_ENABLE_MUELU        = ON
+#opt-set -D Trilinos_ENABLE_TEUCHOS      = "value with spaces"
+#opt-set -D Trilinos_ENABLE_TPETRA       = 'value with spaces'
+#opt-set -D Trilinos_ENABLE_ROL          = 'value "with" spaces'
+#opt-set -D Trilinos_ENABLE_PANZER       = '"single double quoted?"'
+#opt-set /path/to/random/place
+#opt-remove Trilinos_ENABLE_KOKKOS
+
+#[TEST_CONFIGURATION_A+]
+#use TEST_CONFIGURATION_A
+#use TEST_CONFIGURATION_B
+
+
+#[TEST_CONFIGURATION_B+]
+#use TEST_CONFIGURATION_B
+#use TEST_CONFIGURATION_A
 
 
 
