Initial development checkpoint

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -90,5 +90,6 @@ use CMAKE_KOKKOS_DEFAULT
 use CMAKE_TPETRA_DEFAULT
 use CMAKE_MUELU_DEFAULT
 use CMAKE_BUILD_DIR
+opt-remove Trilinos_ENABLE_MueLu
 opt-remove MueLu SUBSTR
 
