--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -4,56 +4,10 @@
 #
 #==============================================================================
 
-
-#[TEST_CONFIGURATION_A]
-#-G = Ninja
-#-DTrilinos_ENABLE_KOKKOS:BOOL = OFF
-#-DTrilinos_ENABLE_TPETRA:BOOL = OFF
-
-
-#[TEST_CONFIGURATION_B]
-#opt-cmake-generator : Ninja
-#opt-cmake-cachevar Trilinos_ENABLE_KOKKOS BOOL : ON
-#opt-cmake-cachevar Trilinos_ENABLE_MUELU : ON
-#opt-cmake-remove-cachevar Trilinos_ENABLE_MUELU
-
-
-#[TEST_CONFIGURATION_C]
-#create-xform OPT_CMAKE_GENERATOR 1 : -G=${VALUE}
-#create-xform OPT_CMAKE_CACHEVAR  1 : -D${PARAM1}=${VALUE}
-#create-xform OPT_CMAKE_CACHEVAR  2 : -D${PARAM1}:${PARAM2}=${VALUE}
-
-#OPT_CMAKE_GENERATOR: Ninja
-#OPT_CMAKE_CACHEVAR Trilinos_ENABLE_KOKKOS : ON
-#OPT_CMAKE_CACHEVAR Trilinos_ENABLE_TPETRA BOOL : ON
-
-
-#[TEST_CONFIGURATION_D]
-#opt-set cmake
-#opt-set -G                              = Ninja
-#opt-set -D Trilinos_ENABLE_KOKKOS :BOOL = ON
-#opt-set -D Trilinos_ENABLE_XPETRA :BOOL = ON
-#opt-set -D Trilinos_ENABLE_MUELU        = ON
-#opt-set -D Trilinos_ENABLE_TEUCHOS      = "value with spaces"
-#opt-set -D Trilinos_ENABLE_TPETRA       = 'value with spaces'
-#opt-set -D Trilinos_ENABLE_ROL          = 'value "with" spaces'
-#opt-set -D Trilinos_ENABLE_PANZER       = '"single double quoted?"'
-#opt-set /path/to/random/place
-#opt-remove Trilinos_ENABLE_KOKKOS
-
-#[TEST_CONFIGURATION_A+]
-#use TEST_CONFIGURATION_A
-#use TEST_CONFIGURATION_B
-
-
-#[TEST_CONFIGURATION_B+]
-#use TEST_CONFIGURATION_B
-#use TEST_CONFIGURATION_A
-
-
-
 #
-# Sample Configuration
+# Sample Trilinos(ish) Configuration
+# - This configuration is made to look similar to what we might have in a
+#   `deployment` configuration.
 #
 [CMAKE_GENERATOR_NINJA]
 opt-set cmake
@@ -92,4 +46,42 @@ use CMAKE_MUELU_DEFAULT
 use CMAKE_BUILD_DIR
 opt-remove Trilinos_ENABLE_MueLu
 opt-remove MueLu SUBSTR
+
+
+
+#
+# Sample Test Configurations
+#
+[TEST_CMAKE_CACHE_OPTION_WITH_OPTIONAL_TYPE]
+opt-set-cmake-cache CMAKE_VAR_NAME_A OPTIONAL_TYPE : ON
+
+
+[TEST_CMAKE_CACHE_OPTION_WITHOUT_OPTIONAL_TYPE]
+opt-set-cmake-cache CMAKE_VAR_NAME_B : ON
+
+
+[TEST_GENERIC_OPTION_SET]
+opt-set -A Param1 Param2 Param3 : VALUE
+
+
+[TEST_OPTION_REMOVAL_VARIABLES]
+opt-set -A Param1 Param2 Param3 : VALUE_A
+opt-set -B Param4 Param5 Param6 : VALUE_B
+opt-set -C Arg1   Arg2   Arg3   : VALUE_C
+
+[TEST_OPTION_REMOVAL_VARS_01]
+use TEST_OPTION_REMOVAL_VARIABLES
+opt-remove Param2
+
+[TEST_OPTION_REMOVAL_VARS_02]
+use TEST_OPTION_REMOVAL_VARIABLES
+opt-remove Param SUBSTR
+
+
+[TEST_GEN_OPTION_LIST_ERROR_01]
+opt-set Param1 Param2 Param3 : Value_A
+
+
+[TEST_OPT_REMOVE_NO_PARAMS_01]
+opt-remove
 
