Documentation and test coverage update

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -19,8 +19,8 @@ opt-set-cmake-cache  Trilinos_ENABLE_THREAD_SAFE   BOOL   : ON
 opt-set-cmake-cache  Trilinos_PARALLEL_COMPILE_JOBS_LIMIT : 20
 opt-set-cmake-cache  Trilinos_PARALLEL_LINK_JOBS_LIMIT    : 4
 
-[CMAKE_BUILD_DIR]
-opt-set /path/to/build/dir
+[CMAKE_SOURCE_DIR]
+opt-set /path/to/source/dir
 
 [CMAKE_KOKKOS_DEFAULT]
 opt-set-cmake-cache  Trilinos_ENABLE_Kokkos         BOOL : ON
@@ -43,7 +43,7 @@ use TRILINOS_COMMON
 use CMAKE_KOKKOS_DEFAULT
 use CMAKE_TPETRA_DEFAULT
 use CMAKE_MUELU_DEFAULT
-use CMAKE_BUILD_DIR
+use CMAKE_SOURCE_DIR
 opt-remove Trilinos_ENABLE_MueLu
 opt-remove MueLu SUBSTR
 
