Issue #2: refactor opt-set-cmake-cache

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -36,7 +36,6 @@ opt-set-cmake-cache  MueLu_ENABLE_TESTS     BOOL : ON
 opt-set-cmake-cache  Trilinos_ENABLE_Tpetra BOOL : ON
 opt-set-cmake-cache  Tpetra_INST_DOUBLE     BOOL : ON
 
-
 [TRILINOS_CONFIGURATION_ALPHA]
 use CMAKE_GENERATOR_NINJA
 use TRILINOS_COMMON
@@ -47,6 +46,30 @@ use CMAKE_SOURCE_DIR
 opt-remove Trilinos_ENABLE_MueLu
 opt-remove MueLu SUBSTR
 
+[TEST_CMAKE_CACHE_PARAM_ORDER]
+opt-set-cmake-cache CMAKE_VAR_A FORCE        : ON
+opt-set-cmake-cache CMAKE_VAR_B PARENT_SCOPE : ON
+opt-set-cmake-cache CMAKE_VAR_C BOOL         : ON
+
+opt-set-cmake-cache CMAKE_VAR_D FORCE PARENT_SCOPE : ON
+opt-set-cmake-cache CMAKE_VAR_E PARENT_SCOPE FORCE : ON
+
+opt-set-cmake-cache CMAKE_VAR_F BOOL FORCE : ON
+opt-set-cmake-cache CMAKE_VAR_G FORCE BOOL : ON
+
+opt-set-cmake-cache CMAKE_VAR_H BOOL PARENT_SCOPE : ON
+opt-set-cmake-cache CMAKE_VAR_I PARENT_SCOPE BOOL : ON
+
+opt-set-cmake-cache CMAKE_VAR_J BOOL FORCE PARENT_SCOPE : ON
+opt-set-cmake-cache CMAKE_VAR_K BOOL PARENT_SCOPE FORCE : ON
+opt-set-cmake-cache CMAKE_VAR_L FORCE PARENT_SCOPE BOOL : ON
+opt-set-cmake-cache CMAKE_VAR_M FORCE BOOL PARENT_SCOPE : ON
+opt-set-cmake-cache CMAKE_VAR_N PARENT_SCOPE BOOL FORCE : ON
+opt-set-cmake-cache CMAKE_VAR_O PARENT_SCOPE FORCE BOOL : ON
+
+[TEST_CMAKE_CACHE_PARAM_TEST_02]
+# Validate what happens if there's a bad param.
+opt-set-cmake-cache CMAKE_VAR_A FORCE FOOBAR: ON
 
 
 #
