Issue #2: Remaned opt-set-cmake-cache to opt-set-cmake-var to better reflect what the operation is doing

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -14,27 +14,27 @@ opt-set cmake
 opt-set -G : Ninja
 
 [TRILINOS_COMMON]
-opt-set-cmake-cache  Trilinos_ENABLE_COMPLEX       BOOL   : ON
-opt-set-cmake-cache  Trilinos_ENABLE_THREAD_SAFE   BOOL   : ON
-opt-set-cmake-cache  Trilinos_PARALLEL_COMPILE_JOBS_LIMIT : 20
-opt-set-cmake-cache  Trilinos_PARALLEL_LINK_JOBS_LIMIT    : 4
+opt-set-cmake-var  Trilinos_ENABLE_COMPLEX       BOOL   : ON
+opt-set-cmake-var  Trilinos_ENABLE_THREAD_SAFE   BOOL   : ON
+opt-set-cmake-var  Trilinos_PARALLEL_COMPILE_JOBS_LIMIT : 20
+opt-set-cmake-var  Trilinos_PARALLEL_LINK_JOBS_LIMIT    : 4
 
 [CMAKE_SOURCE_DIR]
 opt-set /path/to/source/dir
 
 [CMAKE_KOKKOS_DEFAULT]
-opt-set-cmake-cache  Trilinos_ENABLE_Kokkos         BOOL : ON
-opt-set-cmake-cache  Trilinos_ENABLE_KokkosCore     BOOL : ON
-opt-set-cmake-cache  Trilinos_ENABLE_KokkosKernels  BOOL : ON
-opt-set-cmake-cache  KokkosKernels_ENABLE_EXAMPLES  BOOL : ON
+opt-set-cmake-var  Trilinos_ENABLE_Kokkos         BOOL : ON
+opt-set-cmake-var  Trilinos_ENABLE_KokkosCore     BOOL : ON
+opt-set-cmake-var  Trilinos_ENABLE_KokkosKernels  BOOL : ON
+opt-set-cmake-var  KokkosKernels_ENABLE_EXAMPLES  BOOL : ON
 
 [CMAKE_MUELU_DEFAULT]
-opt-set-cmake-cache  Trilinos_ENABLE_MueLu  BOOL : ON
-opt-set-cmake-cache  MueLu_ENABLE_TESTS     BOOL : ON
+opt-set-cmake-var  Trilinos_ENABLE_MueLu  BOOL : ON
+opt-set-cmake-var  MueLu_ENABLE_TESTS     BOOL : ON
 
 [CMAKE_TPETRA_DEFAULT]
-opt-set-cmake-cache  Trilinos_ENABLE_Tpetra BOOL : ON
-opt-set-cmake-cache  Tpetra_INST_DOUBLE     BOOL : ON
+opt-set-cmake-var  Trilinos_ENABLE_Tpetra BOOL : ON
+opt-set-cmake-var  Tpetra_INST_DOUBLE     BOOL : ON
 
 [TRILINOS_CONFIGURATION_ALPHA]
 use CMAKE_GENERATOR_NINJA
@@ -47,40 +47,40 @@ opt-remove Trilinos_ENABLE_MueLu
 opt-remove MueLu SUBSTR
 
 [TEST_CMAKE_CACHE_PARAM_ORDER]
-opt-set-cmake-cache CMAKE_VAR_A FORCE        : ON
-opt-set-cmake-cache CMAKE_VAR_B PARENT_SCOPE : ON
-opt-set-cmake-cache CMAKE_VAR_C BOOL         : ON
+opt-set-cmake-var CMAKE_VAR_A FORCE        : ON
+opt-set-cmake-var CMAKE_VAR_B PARENT_SCOPE : ON
+opt-set-cmake-var CMAKE_VAR_C BOOL         : ON
 
-opt-set-cmake-cache CMAKE_VAR_D FORCE PARENT_SCOPE : ON
-opt-set-cmake-cache CMAKE_VAR_E PARENT_SCOPE FORCE : ON
+opt-set-cmake-var CMAKE_VAR_D FORCE PARENT_SCOPE : ON
+opt-set-cmake-var CMAKE_VAR_E PARENT_SCOPE FORCE : ON
 
-opt-set-cmake-cache CMAKE_VAR_F BOOL FORCE : ON
-opt-set-cmake-cache CMAKE_VAR_G FORCE BOOL : ON
+opt-set-cmake-var CMAKE_VAR_F BOOL FORCE : ON
+opt-set-cmake-var CMAKE_VAR_G FORCE BOOL : ON
 
-opt-set-cmake-cache CMAKE_VAR_H BOOL PARENT_SCOPE : ON
-opt-set-cmake-cache CMAKE_VAR_I PARENT_SCOPE BOOL : ON
+opt-set-cmake-var CMAKE_VAR_H BOOL PARENT_SCOPE : ON
+opt-set-cmake-var CMAKE_VAR_I PARENT_SCOPE BOOL : ON
 
-opt-set-cmake-cache CMAKE_VAR_J BOOL FORCE PARENT_SCOPE : ON
-opt-set-cmake-cache CMAKE_VAR_K BOOL PARENT_SCOPE FORCE : ON
-opt-set-cmake-cache CMAKE_VAR_L FORCE PARENT_SCOPE BOOL : ON
-opt-set-cmake-cache CMAKE_VAR_M FORCE BOOL PARENT_SCOPE : ON
-opt-set-cmake-cache CMAKE_VAR_N PARENT_SCOPE BOOL FORCE : ON
-opt-set-cmake-cache CMAKE_VAR_O PARENT_SCOPE FORCE BOOL : ON
+opt-set-cmake-var CMAKE_VAR_J BOOL FORCE PARENT_SCOPE : ON
+opt-set-cmake-var CMAKE_VAR_K BOOL PARENT_SCOPE FORCE : ON
+opt-set-cmake-var CMAKE_VAR_L FORCE PARENT_SCOPE BOOL : ON
+opt-set-cmake-var CMAKE_VAR_M FORCE BOOL PARENT_SCOPE : ON
+opt-set-cmake-var CMAKE_VAR_N PARENT_SCOPE BOOL FORCE : ON
+opt-set-cmake-var CMAKE_VAR_O PARENT_SCOPE FORCE BOOL : ON
 
 [TEST_CMAKE_CACHE_PARAM_TEST_02]
 # Validate what happens if there's a bad param.
-opt-set-cmake-cache CMAKE_VAR_A FORCE FOOBAR: ON
+opt-set-cmake-var CMAKE_VAR_A FORCE FOOBAR: ON
 
 
 #
 # Sample Test Configurations
 #
 [TEST_CMAKE_CACHE_OPTION_WITH_OPTIONAL_TYPE]
-opt-set-cmake-cache CMAKE_VAR_NAME_A OPTIONAL_TYPE : ON
+opt-set-cmake-var CMAKE_VAR_NAME_A OPTIONAL_TYPE : ON
 
 
 [TEST_CMAKE_CACHE_OPTION_WITHOUT_OPTIONAL_TYPE]
-opt-set-cmake-cache CMAKE_VAR_NAME_B : ON
+opt-set-cmake-var CMAKE_VAR_NAME_B : ON
 
 
 [TEST_GENERIC_OPTION_SET]
