Add quotes to values with spaces in them.
Values that contain spaces for option setting will be put in quotes
for cases where one might need to set an option that would have
spaces. For example:
```
opt-set OPTS : FOO BAR BAZ
```

will now generate `OPTS="FOO BAR BAZ"`.

Relates to #4

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -108,3 +108,20 @@ opt-set Param1 Param2 Param3 : Value_A
 [TEST_OPT_REMOVE_NO_PARAMS_01]
 opt-remove
 
+
+[TEST_EXPANSION_IN_ARGUMENT]
+opt-set TEST_PATH : ${PATH}
+
+
+[TEST_SPACES_IN_VALUE]
+opt-set TEST_OPTIONS : -ldl -fsanitize=address
+
+
+[TEST_SPACES_AND_EXPANSION]
+opt-set TEST_OPTIONS : -L${PATH} -ldl -fsanitize=address
+
+
+[TEST_VARIABLE_EXPANSION_IN_CMAKE_VAR]
+opt-set cmake
+opt-set-cmake-var ENABLE_FLAG BOOL : ON
+opt-set-cmake-var CMAKE_EXE_LINKER_FLAGS STRING : "${CMAKE_EXE_LINKER_FLAGS} -ldl -fsanitize=address"
