Issue 04: Prototyping out options

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -125,3 +125,17 @@ opt-set TEST_OPTIONS : -L${PATH} -ldl -fsanitize=address
 opt-set cmake
 opt-set-cmake-var ENABLE_FLAG BOOL : ON
 opt-set-cmake-var CMAKE_EXE_LINKER_FLAGS STRING : "${CMAKE_EXE_LINKER_FLAGS} -ldl -fsanitize=address"
+
+[TEST_SECTION]
+opt-set OPTS : FOO 'BAR BAZ'
+
+
+[TEST_CMAKE_FRAGMENT_VAR_UPDATE]
+opt-set-cmake-var MY_CMAKE_VAR STRING : do you
+# APPEND 'even'
+opt-mod-cmake-var MY_CMAKE_VAR : even
+# APPEND 'lift'
+opt-mod-cmake-var MY_CMAKE_VAR APPEND : lift
+# PREPEND 'bro'
+opt-mod-cmake-var MY_CMAKE_VAR PREPEND: bro
+# Result should be "bro do you even lift"  :p
