--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -118,7 +118,7 @@ opt-set TEST_OPTIONS : -ldl -fsanitize=address
 
 
 [TEST_SPACES_AND_EXPANSION]
-opt-set TEST_OPTIONS : -L${PATH} -ldl -fsanitize=address
+opt-set TEST_OPTIONS : -L${PATH|ENV} -ldl -fsanitize=address
 
 
 [TEST_VARIABLE_EXPANSION_IN_CMAKE_VAR]
@@ -130,12 +130,22 @@ opt-set-cmake-var CMAKE_EXE_LINKER_FLAGS STRING : "${CMAKE_EXE_LINKER_FLAGS} -ld
 opt-set OPTS : FOO 'BAR BAZ'
 
 
-[TEST_CMAKE_FRAGMENT_VAR_UPDATE]
-opt-set-cmake-var MY_CMAKE_VAR STRING : do you
-# APPEND 'even'
-opt-mod-cmake-var MY_CMAKE_VAR : even
-# APPEND 'lift'
-opt-mod-cmake-var MY_CMAKE_VAR APPEND : lift
-# PREPEND 'bro'
-opt-mod-cmake-var MY_CMAKE_VAR PREPEND: bro
-# Result should be "bro do you even lift"  :p
+#[TEST_CMAKE_FRAGMENT_VAR_UPDATE]
+## *This will likely be tossed out*
+#opt-set-cmake-var MY_CMAKE_VAR STRING : do you
+## APPEND 'even'
+#opt-mod-cmake-var MY_CMAKE_VAR : even
+## APPEND 'lift'
+#opt-mod-cmake-var MY_CMAKE_VAR APPEND : lift
+## PREPEND 'bro'
+#opt-mod-cmake-var MY_CMAKE_VAR PREPEND: bro
+## Result should be "bro do you even lift"  :p
+
+
+[TEST_VAR_EXPANSION_COMMON]
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV}"
+
+[TEST_VAR_EXPANSION_UPDATE]
+opt-set cmake
+use TEST_VAR_EXPANSION_COMMON
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -g"
