--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -126,26 +126,16 @@ opt-set cmake
 opt-set-cmake-var ENABLE_FLAG BOOL : ON
 opt-set-cmake-var CMAKE_EXE_LINKER_FLAGS STRING : "${CMAKE_EXE_LINKER_FLAGS} -ldl -fsanitize=address"
 
+
 [TEST_SECTION]
 opt-set OPTS : FOO 'BAR BAZ'
 
 
-#[TEST_CMAKE_FRAGMENT_VAR_UPDATE]
-## *This will likely be tossed out*
-#opt-set-cmake-var MY_CMAKE_VAR STRING : do you
-## APPEND 'even'
-#opt-mod-cmake-var MY_CMAKE_VAR : even
-## APPEND 'lift'
-#opt-mod-cmake-var MY_CMAKE_VAR APPEND : lift
-## PREPEND 'bro'
-#opt-mod-cmake-var MY_CMAKE_VAR PREPEND: bro
-## Result should be "bro do you even lift"  :p
-
-
 [TEST_VAR_EXPANSION_COMMON]
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV}"
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
+
 
 [TEST_VAR_EXPANSION_UPDATE]
 opt-set cmake
 use TEST_VAR_EXPANSION_COMMON
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -g"
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bar"
