--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -131,6 +131,14 @@ opt-set-cmake-var CMAKE_EXE_LINKER_FLAGS STRING : "${CMAKE_EXE_LINKER_FLAGS} -ld
 opt-set OPTS : FOO 'BAR BAZ'
 
 
+[TEST_VAR_EXPANSION_ENV]
+opt-set FOO : "${FOOBAR|ENV} -baz"
+
+
+[TEST_VAR_EXPANSION_NO_TYPE]
+opt-set FOO : "${FOOBAR} -baz"
+
+
 [TEST_VAR_EXPANSION_COMMON]
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
 
