--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -143,7 +143,11 @@ opt-set FOO : "${FOOBAR} -baz"
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
 
 
-[TEST_VAR_EXPANSION_UPDATE]
+[TEST_VAR_EXPANSION_UPDATE_01]
 opt-set cmake
 use TEST_VAR_EXPANSION_COMMON
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bar"
+
+[TEST_VAR_EXPANSION_UPDATE_02]
+use TEST_VAR_EXPANSION_UPDATE_01
+opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
