Add extra test case

--- a/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -151,3 +151,7 @@ opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bar"
 [TEST_VAR_EXPANSION_UPDATE_02]
 use TEST_VAR_EXPANSION_UPDATE_01
 opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
+
+[TEST_VAR_EXPANSION_UPDATE_03]
+use TEST_VAR_EXPANSION_UPDATE_01
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bif"
