Added a test to increase coverage

--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -155,3 +155,7 @@ opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
 [TEST_VAR_EXPANSION_UPDATE_03]
 use TEST_VAR_EXPANSION_UPDATE_01
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bif"
+
+[TEST_STRING_DOUBLE_QUOTES]
+opt-set-cmake-var Panzer_FADTYPE STRING: Sacado::Fad::DFad<RealType>
+opt-set-cmake-var DART_TESTING_TIMEOUT STRING: "600"
