--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -146,7 +146,7 @@ opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
 [TEST_VAR_EXPANSION_UPDATE_01]
 opt-set cmake
 use TEST_VAR_EXPANSION_COMMON
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bar"
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING FORCE : "${CMAKE_CXX_FLAGS|CMAKE} -bar"
 
 [TEST_VAR_EXPANSION_UPDATE_02]
 use TEST_VAR_EXPANSION_UPDATE_01
@@ -154,7 +154,7 @@ opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
 
 [TEST_VAR_EXPANSION_UPDATE_03]
 use TEST_VAR_EXPANSION_UPDATE_01
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bif"
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING FORCE : "${CMAKE_CXX_FLAGS|CMAKE} -bif"
 
 [TEST_STRING_DOUBLE_QUOTES]
 opt-set-cmake-var Panzer_FADTYPE STRING: Sacado::Fad::DFad<RealType>
