--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -156,6 +156,12 @@ opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
 use TEST_VAR_EXPANSION_UPDATE_01
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING FORCE : "${CMAKE_CXX_FLAGS|CMAKE} -bif"
 
+[TEST_VAR_EXPANSION_UPDATE_04]
+opt-set cmake
+use TEST_VAR_EXPANSION_COMMON
+# Test (return None) at SetProgramOptionsCMake.py:_program_option_handler_opt_set_cmake_var_bash:188
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foobar"
+
 [TEST_STRING_DOUBLE_QUOTES]
 opt-set-cmake-var Panzer_FADTYPE STRING: Sacado::Fad::DFad<RealType>
 opt-set-cmake-var DART_TESTING_TIMEOUT STRING: "600"
