TEST: Validate that `opt-remove` works for cmake
This commit validates that `opt-remove` will also work for
variables that are set using `opt-set-cmake-var`.

Also cleaned up the .ini in an existing test that used Trilinos
specific language.

--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -156,6 +156,17 @@ opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
 use TEST_VAR_EXPANSION_UPDATE_01
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING: "${CMAKE_CXX_FLAGS|CMAKE} -bif"
 
+
 [TEST_STRING_DOUBLE_QUOTES]
-opt-set-cmake-var Panzer_FADTYPE STRING: Sacado::Fad::DFad<RealType>
-opt-set-cmake-var DART_TESTING_TIMEOUT STRING: "600"
+opt-set-cmake-var FOO STRING: foo::bar::baz<Type>
+opt-set-cmake-var BAR STRING: "600"
+
+
+[TEST_CMAKE_VAR_REMOVE]
+# Test whether or not opt-remove works for a cmake var
+opt-set-cmake-var FOO_TEST: "FOO"
+opt-set-cmake-var BAR_TEST: "BAR"
+opt-set-cmake-var FOO     : "BAZ"
+# this should remove `FOO_TEST` from the option list so we will only
+# have `BAR_TEST` and `FOO` left.
+opt-remove FOO_TEST
