TRILFRAME-128: Fixes to opt-set-cmake-options

--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -46,29 +46,26 @@ use CMAKE_SOURCE_DIR
 opt-remove Trilinos_ENABLE_MueLu
 opt-remove MueLu SUBSTR
 
+
+[TEST_CMAKE_FAIL_ON_PARENT_SCOPE_AND_FORCE]
+# PARENT_SCOPE makes the value a non-cache option
+# but FORCE requires a cache type
+# CMake will error if you give both so we should raise an exception here.
+opt-set-cmake-var CMAKE_VAR_A PARENT_SCOPE FORCE : CMAKE_VAR_A_VAL
+
+
 [TEST_CMAKE_CACHE_PARAM_ORDER]
 opt-set-cmake-var CMAKE_VAR_A FORCE        : ON
 opt-set-cmake-var CMAKE_VAR_B PARENT_SCOPE : ON
 opt-set-cmake-var CMAKE_VAR_C BOOL         : ON
-
-opt-set-cmake-var CMAKE_VAR_D FORCE PARENT_SCOPE : ON
-opt-set-cmake-var CMAKE_VAR_E PARENT_SCOPE FORCE : ON
-
-opt-set-cmake-var CMAKE_VAR_F BOOL FORCE : ON
-opt-set-cmake-var CMAKE_VAR_G FORCE BOOL : ON
-
+opt-set-cmake-var CMAKE_VAR_F BOOL FORCE   : ON
+opt-set-cmake-var CMAKE_VAR_G FORCE BOOL   : ON
 opt-set-cmake-var CMAKE_VAR_H BOOL PARENT_SCOPE : ON
 opt-set-cmake-var CMAKE_VAR_I PARENT_SCOPE BOOL : ON
 
-opt-set-cmake-var CMAKE_VAR_J BOOL FORCE PARENT_SCOPE : ON
-opt-set-cmake-var CMAKE_VAR_K BOOL PARENT_SCOPE FORCE : ON
-opt-set-cmake-var CMAKE_VAR_L FORCE PARENT_SCOPE BOOL : ON
-opt-set-cmake-var CMAKE_VAR_M FORCE BOOL PARENT_SCOPE : ON
-opt-set-cmake-var CMAKE_VAR_N PARENT_SCOPE BOOL FORCE : ON
-opt-set-cmake-var CMAKE_VAR_O PARENT_SCOPE FORCE BOOL : ON
-
 [TEST_CMAKE_CACHE_PARAM_TEST_02]
 # Validate what happens if there's a bad param.
+# Note: FORCE option will make this a CACHE var of type STRING
 opt-set-cmake-var CMAKE_VAR_A FORCE FOOBAR: ON
 
 
