--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -14,8 +14,10 @@ opt-set cmake
 opt-set -G : Ninja
 
 [TRILINOS_COMMON]
-opt-set-cmake-var  Trilinos_ENABLE_COMPLEX       BOOL   : ON
-opt-set-cmake-var  Trilinos_ENABLE_THREAD_SAFE   BOOL   : ON
+opt-set-cmake-var  Trilinos_ENABLE_COMPLEX              BOOL   : ON
+opt-set-cmake-var  Trilinos_ENABLE_THREAD_SAFE          BOOL   : ON
+# These are left UNTYPED so they aren't considered CACHE
+# vars. This will cause the bash generator to skip them.
 opt-set-cmake-var  Trilinos_PARALLEL_COMPILE_JOBS_LIMIT : 20
 opt-set-cmake-var  Trilinos_PARALLEL_LINK_JOBS_LIMIT    : 4
 
@@ -58,10 +60,10 @@ opt-set-cmake-var CMAKE_VAR_A PARENT_SCOPE FORCE : CMAKE_VAR_A_VAL
 opt-set-cmake-var CMAKE_VAR_A FORCE        : ON
 opt-set-cmake-var CMAKE_VAR_B PARENT_SCOPE : ON
 opt-set-cmake-var CMAKE_VAR_C BOOL         : ON
-opt-set-cmake-var CMAKE_VAR_F BOOL FORCE   : ON
-opt-set-cmake-var CMAKE_VAR_G FORCE BOOL   : ON
-opt-set-cmake-var CMAKE_VAR_H BOOL PARENT_SCOPE : ON
-opt-set-cmake-var CMAKE_VAR_I PARENT_SCOPE BOOL : ON
+opt-set-cmake-var CMAKE_VAR_D BOOL FORCE   : ON
+opt-set-cmake-var CMAKE_VAR_E FORCE BOOL   : ON
+opt-set-cmake-var CMAKE_VAR_F BOOL PARENT_SCOPE : ON
+opt-set-cmake-var CMAKE_VAR_G PARENT_SCOPE BOOL : ON
 
 [TEST_CMAKE_CACHE_PARAM_TEST_02]
 # Validate what happens if there's a bad param.
@@ -136,28 +138,38 @@ opt-set FOO : "${FOOBAR|ENV} -baz"
 opt-set FOO : "${FOOBAR} -baz"
 
 
+#
+# Variable expansion tests
+#
 [TEST_VAR_EXPANSION_COMMON]
+# Create the CACHE variable CMAKE_CXX_FLAGS of STRING type.
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foo"
 
-
 [TEST_VAR_EXPANSION_UPDATE_01]
+# Test an 'update' of CMAKE_CXX_FLAGS that is not FORCE
+# - In practice, CMake would not actually update CMAKE_CXX_FLAGS
+#   here because it's a CACHE var (per TEST_VAR_EXPANSION_COMMON)
+#   And CMake won't overwrite CACHE vars unless FORCEd.
 opt-set cmake
 use TEST_VAR_EXPANSION_COMMON
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING FORCE : "${CMAKE_CXX_FLAGS|CMAKE} -bar"
+opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${CMAKE_CXX_FLAGS|CMAKE} -bar"
 
 [TEST_VAR_EXPANSION_UPDATE_02]
-use TEST_VAR_EXPANSION_UPDATE_01
+opt-set cmake
+use TEST_VAR_EXPANSION_COMMON
+# This should be a problem for Bash generation since the CMake var
+# CMAKE_F90_FLAGS would be unknown to bash. Depending on the
+# exception_control_level this will either trigger an exception when
+# sent to the bash generator or it could resolve the CMAKE var to an
+# empty string + warning.
 opt-set-cmake-var CMAKE_F90_FLAGS STRING: "${CMAKE_F90_FLAGS|CMAKE} -baz"
 
 [TEST_VAR_EXPANSION_UPDATE_03]
+# Updates CMAKE_CXX_FLAGS using a FORCE operation.
+# In practice, this would result in CMAKE_CXX_FLAGS = "${LDFLAGS|ENV} -foo -bif"
 use TEST_VAR_EXPANSION_UPDATE_01
 opt-set-cmake-var CMAKE_CXX_FLAGS STRING FORCE : "${CMAKE_CXX_FLAGS|CMAKE} -bif"
 
-[TEST_VAR_EXPANSION_UPDATE_04]
-opt-set cmake
-use TEST_VAR_EXPANSION_COMMON
-# Test (return None) at SetProgramOptionsCMake.py:_program_option_handler_opt_set_cmake_var_bash:188
-opt-set-cmake-var CMAKE_CXX_FLAGS STRING : "${LDFLAGS|ENV} -foobar"
 
 [TEST_STRING_DOUBLE_QUOTES]
 opt-set-cmake-var FOO STRING: foo::bar::baz<Type>
@@ -166,9 +178,13 @@ opt-set-cmake-var BAR STRING: "600"
 
 [TEST_CMAKE_VAR_REMOVE]
 # Test whether or not opt-remove works for a cmake var
-opt-set-cmake-var FOO_TEST: "FOO"
-opt-set-cmake-var BAR_TEST: "BAR"
-opt-set-cmake-var FOO     : "BAZ"
-# this should remove `FOO_TEST` from the option list so we will only
-# have `BAR_TEST` and `FOO` left.
+opt-set-cmake-var FOO_TEST STRING : "FOO"
+opt-set-cmake-var BAR_TEST STRING : "BAR"
+opt-set-cmake-var BAZ_TEST STRING : "BAZ"
+# opt-remove FOO_TEST should remove the FOO_TEST entry
+# and leave only the BAR_TEST and BAZ_TEST entries.
 opt-remove FOO_TEST
+
+
+[TEST_CMAKE_VAR_FORCE_ONLY]
+opt-set-cmake-var FOO FORCE : "BAR"
