TRILFRAME-120-A: Minor cleanup pass

--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -65,10 +65,21 @@ opt-set-cmake-var CMAKE_VAR_E FORCE BOOL   : ON
 opt-set-cmake-var CMAKE_VAR_F BOOL PARENT_SCOPE : ON
 opt-set-cmake-var CMAKE_VAR_G PARENT_SCOPE BOOL : ON
 
+
 [TEST_CMAKE_CACHE_PARAM_TEST_02]
 # Validate what happens if there's a bad param.
 # Note: FORCE option will make this a CACHE var of type STRING
 opt-set-cmake-var CMAKE_VAR_A FORCE FOOBAR: ON
+
+
+# This section is to be used to ensure that PARENT_SCOPE
+# will force a type-1 (non-cache) var.
+# The entries with PARENT_SCOPE enabled should not appear
+# in generated BASH output.
+[TEST_CMAKE_PARENT_SCOPE_NOT_BASH]
+opt-set-cmake-var FOO_VAR_A PARENT_SCOPE        : FOO_VAL A
+opt-set-cmake-var FOO_VAR_B STRING PARENT_SCOPE : FOO_VAL B
+
 
 
 #
