TRILFRAME-120+ Add bash test for unresolved cmake var

--- a/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
+++ b/src/setprogramoptions/unittests/files_ini/config_test_setprogramoptions.ini
@@ -199,3 +199,18 @@ opt-remove FOO_TEST
 
 [TEST_CMAKE_VAR_FORCE_ONLY]
 opt-set-cmake-var FOO FORCE : "BAR"
+
+
+[TEST_CMAKE_VAR_IN_BASH_GENERATOR]
+# The purpose of this section is to see what we do if someone
+# has an _update_ operation (i.e., append/prepend to an existing var)
+# and that cmake var does not exist already. In this case we emulate
+# this by simulating a typo but it could occur in other cases where
+# a cmake generator would expect a fragment to update something that was
+# defined elsewhere. Should the bash generator throw an error or replace
+# "FOO_VAE" with an empty string?
+#
+# Set FOO_VAR to something concrete
+opt-set-cmake-var FOO_VAR STRING : "FOO"
+# Simulated typo in FOO_VAR update
+opt-set-cmake-var FOO_VAR FORCE  : "BAR ${FOO_VAE|CMAKE}"
