update requirements.txt to point to the github location

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@
 
 
 # Privately hosted repositories
-configparserenhanced @ git+ssh://git@gitlab-ex.sandia.gov/trilinos-devops-consolidation/code/ConfigParserEnhanced.git@master#egg=configparserenhanced
+#configparserenhanced @ git+ssh://git@gitlab-ex.sandia.gov/trilinos-devops-consolidation/code/ConfigParserEnhanced.git@master#egg=configparserenhanced
+
+configparserenhanced @ git+https://github.com/sandialabs/ConfigParserEnhanced.git@master#egg=configparserenhanced
 
