--- a/.github/workflows/test-driver-core.yml
+++ b/.github/workflows/test-driver-core.yml
@@ -34,19 +34,21 @@ jobs:
       - name: Build VirtualEnv
         run: |
           # cd ${{ github.workspace }}
-          #echo "cache name : ${{ env.cache-name }}"
-          #echo "github.head_ref: '${{ github.head_ref }}'"
-          #echo "github.sha     : '${{ github.sha }}'"
+          echo "cache name      : '${{ env.cache-name }}'"
+          echo "github.head_ref : '${{ github.head_ref }}'"
+          echo "github.sha      : '${{ github.sha }}'"
           #pwd
           #ls -ltrhF
           python3 --version > version.txt
           cat version.txt
           python3 -m venv ${{ env.venv-name }}
+          #ls -ltrhF ${{ env.venv-name }}/bin/
           source ${{ env.venv-name }}/bin/activate
+          echo "VIRTUAL_ENV = ${VIRTUAL_ENV}"
           cd source
           # python3 -m pip install wheel configparserenhanced @ git+https://github.com/sandialabs/ConfigParserEnhanced.git@master#egg=configparserenhanced
           python3 -m pip install wheel -r requirements.txt -r requirements-test.txt -r doc/requirements.txt
-          ls -ltrhF
+          #ls -ltrhF
 
   pytest:
     runs-on: ubuntu-latest
@@ -69,8 +71,12 @@ jobs:
       - name: Execute
         run: |
           source ${{ env.venv-name }}/bin/activate
+          cd source
           python3 -m pytest --version
-          python3 -m pytest --cov=configparserenhanced --cov-report=term --cov-report=html --cov-report=html:${{ github.workspace }}/htmlcov --cov-config=.coveragerc
+          #ls -ltrhF
+          echo "VIRTUAL_ENV = ${VIRTUAL_ENV}"
+          python3 -m pytest --cov=setprogramoptions --cov-report=term --cov-report=html:${{ github.workspace }}/htmlcov --cov-config=.coveragerc
+          echo "htmlcov"
           ls -ltrhF ${{ github.workspace }}/htmlcov
 
       - name: Save Artifacts
@@ -79,14 +85,6 @@ jobs:
           name: coverage
           path: htmlcov
           retention-days: 5
-
-
-
-
-
-
-
-
 
 
 
